Fixed the gap at the top of the page

--- a/index.css
+++ b/index.css
@@ -395,7 +395,6 @@ footer {
   width: 80%;
   height: 80%;
   object-fit: contain;
-  opacity: 0;
 }
 
 /* SPACE BACKGROUND */
